# dome_control

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  navnotest.txt  package.xml  setup.cfg  setup.py
.claude/: codereview.md  literate.md  process.md  settings.local.json
.claude/templates/: feature-template.md  task_template.md
01-literate/: 00-overview.md  01-config_manager.md  02-base_api.md  03-movement_api.md  04-intent_api.md  05-calibration_api.md  06-process_api.md  07-announcement_contract.md  08-movement_commands.md  09-launch_commands.md  10-system_commands.md  11-robot_controller.md  12-command_dispatcher.md  13-simple_parser.md  13-speech_api.md  14-simple_cli.md  15-intent_mapper.md  16-wake_word.md  17-stt.md  18-behavior_manager.md  18-voice_runtime.md  19-behavior_manager_node.md  20-voice_input_node.md  21-speech_output_node.md  22-motion_behavior.md  23-perception_behavior.md  24-intent_publisher.md  25-spin_survey.md  26-spin_survey_node.md  27-telemetry_node.md  28-ups_status.md  X01-parameter_def.md  X02-command_def.md  X03-control_commands.md  X04-navigation_commands.md  X05-intent_commands.md  X06-semantic_commands.md  X07-audio_feedback.md  X08-describe_scene_stub.md  X09-simple_parser.md  (+4 more)
02-doc/: alsamixer.md  better_launch.md  control-architecture.md  current.md  notes.md  seeedtuning.md  voice-hardware-smoke-test.md
03-features/: template.md
03-features/deferred/: F05-voice-performance-instrumentation.md  F10-announcement-dedup.md  F11-voice-output-reliability-observability.md
03-features/done/: F01-intent-publishing.md  F02-code-cleanup.md  F03-semantic-behavior-pipeline.md  F04-voice-input-node.md  F06-speech-output-mvp.md  F07-announcement-message-contract.md  F13-deployment-configs.md  F14-shared-voice-runtime.md  F15-unified-intent-architecture.md  F17-telemetry-stats-topic.md  F18-navigation-cli-commands.md  f02-code-cleanup.md  (+1 more)
04-tasks/: template.md
05-issues/: I01-process-log-pipe-race.md  I02-kill-process-can-hang.md  I03-odometry-never-spun.md  I04-dryrun-infinite-loop.md  I05-node-leak-no-cleanup.md  I06-convert-number-crash.md  I07-fragile-dryrun-detection.md  I08-intent-vocabulary-mismatch.md  I09-behavior-handler-interface.md  I10-style-consistency-lint-gate.md  I11-misc-consistency-cleanups.md  I12-hardware-sdk-in-package.md  I13-doc-architecture-drift.md  I14-cli-parsing-inconsistent.md
config/: control-config.yaml  mapper_params_online_async.yaml  telemetry.yaml
control/: announcement_contract.py  behavior_manager.py  behavior_manager_node.py  describe_scene_stub_node.py  speech_output_node.py  voice_input_node.py
docs/: _index.txt  intent.txt  scene.txt  topics.txt
dome_control/: __main__.py  announcement_contract.py  main.py  spin_survey.py  ups_status.py
launch/: remote.launch.py  robot.launch.py
msg/: Announcement.msg  Telemetry.msg
scripts/: behavior_manager  describe_scene_stub  run  speech_output  spin_survey_node  telemetry_node  voice_input
test/: conftest.py  test_announcement_contract.py  test_behavior_manager.py  test_behavior_manager_node_routing.py  test_command_dispatcher.py  test_command_dispatcher_text.py  test_f02_cleanup.py  test_intent_commands.py  test_intent_mapper.py  test_launch_commands.py  test_map_service_logic.py  test_motion_behavior.py  test_negative_numbers.py  test_perception_behavior.py  test_robot_controller_launch.py  test_script_commands.py  test_semantic_commands.py  test_simple_cli_formatting.py  test_speech_output_node.py  test_spin_survey.py  test_telemetry_config.py  test_telemetry_csv_logger.py  test_telemetry_host_stats.py  test_telemetry_node.py  test_telemetry_ups_stats.py  test_voice_input_node.py  test_voice_runtime.py  test_voice_runtime_config.py
(+90 files in other folders)
